ui/k8s/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app: ui
    service: ui
spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  labels:
    app: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          image: localhost/mapapp/ui:0.2.0
          resources:
            limits:
              memory: "300M"
            requests:
              cpu: "100m"
          imagePullPolicy: IfNotPresent #Always
          ports:
            - containerPort: 3000
