ui/k8s/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ui-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ui
spec:
  hosts:
    - "ui.mapapp.local"
  gateways:
    - ui-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: ui
            port:
              number: 3000
